chore: replace Collectors.toList() with toList()
Signed-off-by: Stoyan Stoyanov <stoyan.stoyanov@limechain.tech>